--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "sequelize": "^6.3.5"
   }
 }
