--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "sequelize": "^6.3.5"
