--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^2.2.5",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.3",
     "path": "^0.12.7",
     "sequelize": "^6.3.5"
   }
