--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "node-cron": "^3.0.3",
